--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@obewds/tw-bg-palette-monochromatic",
   "description": "The @obewds/tw-bg-palette-monochromatic modular design system component for Vue.js",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "author": "@oberocks",
   "homepage": "https://obewds.github.io/tw-bg-palette-monochromatic/",
   "license": "MIT",
@@ -12,12 +12,11 @@
     ".": {
       "import": "./dist/tw-bg-palette-monochromatic.es.js",
       "require": "./dist/tw-bg-palette-monochromatic.umd.js"
-    },
-    "./src": "./src/components/TwBgPaletteMonochromatic.vue"
+    }
   },
   "files": [
     "dist",
-    "src/components",
+    "src/data",
     "tests"
   ],
   "types": "./dist/types/index.d.ts",
