--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@obewds/tw-bg-palette-monochromatic",
   "description": "The @obewds/tw-bg-palette-monochromatic modular design system component for Vue.js",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "author": "@oberocks",
   "homepage": "https://obewds.github.io/tw-bg-palette-monochromatic/",
   "license": "MIT",
@@ -41,14 +41,15 @@
     "publish:package": "npm run publish:prep && npm run pkg:org && npm run pkg:login && npm run pkg:publish && npm run git:tag && npm run changelog"
   },
   "devDependencies": {
-    "@rollup/plugin-typescript": "^8.3.4",
+    "@rollup/plugin-typescript": "^8.4.0",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/line-clamp": "^0.4.0",
     "@tailwindcss/typography": "^0.5.4",
     "@types/lodash.merge": "^4.6.7",
-    "@types/node": "^18.6.3",
-    "@vitejs/plugin-vue": "^2.3.3",
+    "@types/node": "^18.7.13",
+    "@vitejs/plugin-vue": "^3.0.3",
+    "@vitest/coverage-c8": "^0.22.1",
     "@vue/test-utils": "^2.0.2",
     "auto-changelog": "^2.4.0",
     "autoprefixer": "^10.4.8",
@@ -56,15 +57,15 @@
     "fs-extra": "^10.1.0",
     "happy-dom": "^6.0.4",
     "lodash": "^4.17.21",
-    "postcss": "^8.4.14",
+    "postcss": "^8.4.16",
     "rimraf": "^3.0.2",
-    "tailwindcss": "^3.1.7",
-    "typescript": "^4.7.4",
-    "vite": "^2.9.13",
-    "vitepress": "^1.0.0-alpha.4",
-    "vitest": "^0.20.2",
+    "tailwindcss": "^3.1.8",
+    "typescript": "^4.8.2",
+    "vite": "^3.0.9",
+    "vitepress": "^1.0.0-alpha.12",
+    "vitest": "^0.22.1",
     "vue": "^3.2.37",
-    "vue-tsc": "^0.39.4"
+    "vue-tsc": "^0.40.2"
   },
   "repository": {
     "type": "git",
