--- a/.github/workflows/publish_npm_package.yml
+++ b/.github/workflows/publish_npm_package.yml
@@ -2,7 +2,7 @@
 
 # For more information see: https://github.com/marketplace/actions/npm-publish
 
-name: Node.js CI Vitest Run Tests
+name: Node.js CI NPM Publish Package
 
 on:
   pull_request:
@@ -23,12 +23,11 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
-      - run: npm install
-      # - run: npm run test
-      - run: npm run pkg:org
-      - run: npm run git:tag
-      - uses: JS-DevTools/npm-publish@v1
+      - id: publish
+        uses: JS-DevTools/npm-publish@v1
         with:
           access: "public"
           tag: ${{ steps.publish.outputs.version }}
           token: ${{ secrets.NPM_GITHUB_OBEWDS_AUTOMATION_AUTH_TOKEN }}
+      - if: steps.publish.outputs.old-version != steps.publish.outputs.version
+        run: npm install && npm run pkg:org && npm run git:tag
