--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@obewds/tw-bg-palette-monochromatic",
   "description": "The @obewds/tw-bg-palette-monochromatic modular design system component for Vue.js",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "author": "@oberocks",
   "homepage": "https://obewds.github.io/tw-bg-palette-monochromatic/",
   "license": "MIT",
@@ -37,11 +37,7 @@
     "pkg:publish": "npm publish --access public",
     "changelog": "auto-changelog --package --unreleased --backfill-limit 20",
     "git:tag": "PACKAGE_VERSION=$(cat package.json | grep \\\"version\\\" | head -1 | awk -F: '{ print $2 }' | sed 's/[\",]//g' | tr -d '[[:space:]]') && git tag v$PACKAGE_VERSION && git push --tags",
-    "publish:prep": "npx rimraf dist && npm run pkg:tsbundle",
-    "publish:package": "npm run publish:prep && npm run pkg:org && npm run pkg:login && npm run pkg:publish && npm run git:tag && npm run changelog",
-
-    "generate": "npx rimraf dist && npm run pkg:tsbundle",
-    "ci:prep": "npm run generate && npm run changelog"
+    "generate": "npx rimraf dist && npm run pkg:tsbundle && npm run changelog"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.0",
